[package]
name = "fimble"
version = "0.1.0"
authors = ["phayes <patrick.d.hayes@gmail.com>"]
edition = "2018"
description = "File Integrity Monitoring"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.1"
blake3 = "0.1.0"
os_str_bytes = "1.0.0"
failure = "0.1.6"