[package]
name = "fimble"
version = "0.1.0"
authors = ["phayes <patrick.d.hayes@gmail.com>"]
edition = "2018"
description = "File Integrity Monitoring"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwalk = "0.4.0"
blake3 = "0.1.0"
os_str_bytes = "1.0.0"
failure = "0.1.6"
growable-bloom-filter = "0.2.1"
