[package]
name = "fimble"
version = "0.1.0"
authors = ["phayes <patrick.d.hayes@gmail.com>"]
edition = "2018"
description = "File Integrity Monitoring"

[dependencies]
jwalk = "0.4.0"
blake3 = "0.1.0"
os_str_bytes = "1.0.0"
failure = "0.1.6"
growable-bloom-filter = "0.2.1"
serde = "1.0.104"

[dev-dependencies]
serde_json = "1.0.44"
hex = "0.4.0"
scopeguard = "1.0.0"
fs_extra = "1.1.0"
copy_dir = "0.1"
